[tool.poetry]
name = "nonebot_plugin_read_60s"
version = "0.1.7"
description = "Regularly send 60s daily reading world to friends in the specified group or list"
authors = []
readme = "README.md"
repository = "https://github.com/bingganhe123/60s"
packages = [{ include = 'nonebot_plugin_read_60s' }]

[tool.poetry.dependencies]
python = "^3.7.3"
nonebot2 = "^2.0.0-beta.1"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
nb-cli = "^0.6.0"

[tool.nonebot]
plugins = [
    "nonebot_plugin_read_60s"
]
plugin_dirs = ["src/plugins"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

