[tool.poetry]
name = "nonebot_plugin_read_60s"
version = "0.1.9"
description = "Regularly send 60s daily reading world to friends in the specified group or list"
authors = []
readme = "README.md"
repository = "https://github.com/bingganhe123/60s"
packages = [{ include = 'nonebot_plugin_read_60s' }]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
nonebot2 = "^2.0.0-beta.1"
json5 = "^0.9.6"
nonebot-plugin-apscheduler = "^0.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
nonebot-adapter-onebot = "^2.0.0-beta.1"
json5 = "^0.9.6"
nb-cli = "^0.6.5"
nonebot-plugin-apscheduler = "^0.1.2"

[tool.nonebot]
plugins = ["nonebot_plugin_read_60s"]
plugin_dirs = ["src/plugins"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
